@@ -27,7 +27,10 @@ class ComposerLock {
 	public function getInstalledDependencies() {
 		$deps = array();
 		foreach ( $this->contents['packages'] as $installed ) {
-			$deps[$installed['name']] = ComposerJson::normalizeVersion( $installed['version'] );
+			$deps[$installed['name']] = array(
+				'version' => ComposerJson::normalizeVersion( $installed['version'] ),
+				'type' => $installed['type'],
+			);
 		}
 
 		return $deps;
